force-app/main/default/objects/Plan_Product_Family__c/Plan_Product_Family__c.object-meta.xml
<CustomObject>
    <description>Config-driven matrix columns and segment relevance for the Account Plan white-space matrix. Drives columns from data, not code.</description>
    <label>Plan Product Family</label>
    <nameField>
        <label>Family Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Product Families</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>