force-app/main/default/objects/Plan_Product_Family__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>When unchecked, this product family is removed from the white-space matrix (without deleting it).</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>