force-app/main/default/objects/Plan_Product_Family__c/fields/Benchmark_ARR_Per_Seat_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Benchmark_ARR_Per_Seat_Corporate__c</fullName>
    <label>Benchmark ARR / Seat (Corporate)</label>
    <description>Fully-penetrated benchmark ARR per in-house counsel for this family on a Corporate plan. Gap-to-benchmark input: benchmark = this x SoW_Denominator x tier multiplier.</description>
    <inlineHelpText>Expected ARR per in-house counsel when this family is fully adopted at a peer corporate legal team. Leave blank if not benchmarked.</inlineHelpText>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>