force-app/main/default/objects/Plan_Product_Family__c/fields/CPQ_Family_Mapping__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Family_Mapping__c</fullName>
    <label>CPQ Family Mapping</label>
    <description>Comma-separated Product2.Family / CPQ values that roll into this plan family (the Phase 2 crosswalk).</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>