force-app/main/default/objects/Plan_Product_Family__c/fields/Family_Type__c.field-meta.xml
<CustomField>
    <fullName>Family_Type__c</fullName>
    <label>Family Type</label>
    <description>Recurring (subscriptions) vs Transactional (events, advertising) - controls cell behaviour.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recurring</fullName>
                <default>true</default>
                <label>Recurring</label>
            </value>
            <value>
                <fullName>Transactional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>