force-app/main/default/objects/Plan_Product_Family__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <description>Optional grouping band for this family on the matrix (e.g. Subscriptions, Events &amp; Media). Blank = ungrouped.</description>
    <type>Lookup</type>
    <referenceTo>Plan_Product_Group__c</referenceTo>
    <relationshipName>Product_Families</relationshipName>
    <relationshipLabel>Product Families</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>