force-app/main/default/objects/Plan_Product_Family__c/fields/Relevant_Corporate__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Corporate__c</fullName>
    <label>Relevant - Corporate</label>
    <description>Whether this family is a matrix column for Corporate / in-house segment plans (e.g. Advertising = false).</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>