force-app/main/default/objects/Plan_Product_Family__c/fields/Relevant_Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Law_Firm__c</fullName>
    <label>Relevant - Law Firm</label>
    <description>Whether this family is a matrix column for Law Firm segment plans.</description>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>