force-app/main/default/objects/Plan_Product_Family__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <description>Column order in the white-space matrix.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>