force-app/main/default/objects/Plan_Product_Family__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Family_Type__c</columns>
    <columns>Relevant_Law_Firm__c</columns>
    <columns>Relevant_Corporate__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>